[package]
name = "praborrow-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SMT-based formal verification for PraBorrow. Interfaces with Z3 theorem prover to mathematically validate Constitution invariants."
keywords = ["formal-verification", "smt", "z3", "proof", "invariant"]
categories = ["development-tools", "rust-patterns", "science"]

[features]
default = ["std"]
std = ["praborrow-core/std"]
# Enable Z3 solver integration. Requires Z3 to be installed or available.
# On Windows: Download Z3 from https://github.com/Z3Prover/z3/releases and set Z3_SYS_Z3_HEADER and related env vars.
# Without this feature, a stub implementation is used that always returns Ok.
z3-backend = ["dep:z3"]

[dependencies]
# Z3 SMT Solver bindings - optional, requires Z3 installation
z3 = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }

# Lazy initialization for global solver context  
lazy_static = { workspace = true }

# Hashing for verification cache
sha2 = { workspace = true }

# Core types (CheckProtocol, etc.)
praborrow-core = { workspace = true }
lru = { workspace = true }

# Structured logging
tracing = { workspace = true }

[dev-dependencies]
# For integration testing
